crates/vite_task_plan/tests/plan_snapshots/fixtures/nested-concurrency/snapshots/query - nested run without --concurrency inherits parent.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&plan_json"
info:
  args:
    - run
    - outer-inherit
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/nested-concurrency
---
{
  "graph": [
    {
      "key": [
        "<workspace>/",
        "outer-inherit"
      ],
      "node": {
        "task_display": {
          "package_name": "@test/nested-concurrency",
          "task_name": "outer-inherit",
          "package_path": "<workspace>/"
        },
        "items": [
          {
            "execution_item_display": {
              "task_display": {
                "package_name": "@test/nested-concurrency",
                "task_name": "outer-inherit",
                "package_path": "<workspace>/"
              },
              "command": "vp run inner",
              "and_item_index": null,
              "cwd": "<workspace>/"
            },
            "kind": {
              "Expanded": {
                "graph": [
                  {
                    "key": [
                      "<workspace>/",
                      "inner"
                    ],
                    "node": {
                      "task_display": {
                        "package_name": "@test/nested-concurrency",
                        "task_name": "inner",
                        "package_path": "<workspace>/"
                      },
                      "items": [
                        {
                          "execution_item_display": {
                            "task_display": {
                              "package_name": "@test/nested-concurrency",
                              "task_name": "inner",
                              "package_path": "<workspace>/"
                            },
                            "command": "print-file package.json",
                            "and_item_index": null,
                            "cwd": "<workspace>/"
                          },
                          "kind": {
                            "Leaf": {
                              "Spawn": {
                                "cache_metadata": null,
                                "spawn_command": {
                                  "program_path": "<tools>/node_modules/.bin/print-file",
                                  "args": [
                                    "package.json"
                                  ],
                                  "all_envs": {
                                    "NO_COLOR": "1",
                                    "PATH": "<workspace>/node_modules/.bin:<tools>/node_modules/.bin"
                                  },
                                  "cwd": "<workspace>/"
                                }
                              }
                            }
                          }
                        }
                      ]
                    },
                    "neighbors": []
                  }
                ],
                "concurrency": 10
              }
            }
          }
        ]
      },
      "neighbors": []
    }
  ],
  "concurrency": 10
}
