crates/vite_task_plan/tests/plan_snapshots/fixtures/nested-concurrency/snapshots/task graph.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: task_graph_json
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/nested-concurrency
---
[
  {
    "key": [
      "<workspace>/",
      "inner"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/nested-concurrency",
        "task_name": "inner",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "print-file package.json",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "outer-concurrency-2"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/nested-concurrency",
        "task_name": "outer-concurrency-2",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "vp run --concurrency=2 inner",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "outer-inherit"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/nested-concurrency",
        "task_name": "outer-inherit",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "vp run inner",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  }
]
